editor/editorStyle.css
.menu-button {
    color: white;
    border: 4px solid #4537c4;
    background: #4537c4;
    font-size: 15px;
    padding: 5px 15px;
    text-decoration: none;
    display: inline-block;
    text-transform: uppercase;
    /*display: inline-block;*/
    transition: all 0.4s ease 0s;
    margin-right: 10px;
}
.menu-button:hover {
    color: #ffffff;
    background: #152296;
    border: 4px solid #152296;
    transition: all 0.4s ease 0s;
}

.question-content {
    background-color: rgba(255, 255, 255, 0);
    margin-top: 15px;
}

.graphDiv {
    display: inline-block;
    background-color: rgba(255, 255, 255, 0);
    /*resize: both;
    overflow: hidden;*/
    min-width: 500px;
    min-height: 400px;
    width: 100%;
    height: 700px;
    margin-top: 5px;
}

/* .textArea {
    display: none;
} */

.tableDiv {
    display: none;
}

/* Graph ----------------------------------------- */
.hint-content-div {
    margin-bottom: 0px;
    margin-top: 5px;
    width: 100%;
    background-color: #b5e9a5;
    border: 1px solid #95cf84;
}

.hint-paragraph {
    background-color: #ffffff00;
    line-height: 19px;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 1em;
    margin: 0px;
    padding: 2px 2px 0px 5px;
}

.hintButton {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 14px;
    text-align: left;
    width: 100%;
    margin-top: 0.5em;
    border: 1px solid #d4d4d4;
    background: #d4d4d4;
    display: block;
}

.hintButton:hover {
    background-color: #bebebe;
}

/* context menus ------------------------------- */
.context-menu-button {
    background-color: #ffffff;
    border: none;
    padding-left: 10px;
    padding-top: 5px;
    padding-bottom: 5px;
    text-align: left;
    font-size: 14px;
    color: black;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
}

.context-menu-button:hover {
    background-color: #e7e7e7;
    color: black;
}

.context-menu {
    display: none;
    position: absolute;
    width: 200px;
    background-color: #ffffff;
    border-radius: 4.5px;
    box-shadow: 0px 0px 6px #adadadc4;
}

/*  rename   */
.rename-div {
    display: none;
    position: absolute;
    /*border: 1px #888f9b solid;*/
    border-radius: 4.5px; 
    background-color: #ffffff;
    width: 190px;
    box-shadow: 0px 0px 6px #adadadc4;
}

.rename-error-p {
    display: none;
    position: absolute;

    color: #a94442;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 1em;

    border: 1px solid #ebccd1 !important;
    border-radius: 2px;
    background-color: #f2dede;
    box-shadow: 0px 0px 0px #0000003a;
    margin: 0px;
    padding: 3px;

}

.rename-input {
    outline: none;
    display: none;
    position: absolute;
    
    color: #000000;
    cursor: text;
    border-radius: 3px;
    width: 46px;
    height: 16px;
    margin: 0px 0px 0px 0px;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 14px;
    padding: 0px;
    margin: 0px;
}

.state-renaming {
    background-color: #8bd0ff;
    border: 0px solid #3e3e3e;
    text-align: center;
}

.edge-renaming {
    background-color: #ffffff;
    border: 1.8px solid #3e3e3e;
    text-align: left;
}

.rename-enter-p {
    font-size: 10px;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    margin: 0px 0px 2px 5px;
    text-align: left;
    color: #a94442;
    background-color: #f2dede;
    border-color: #ebccd1 !important;
}

#ruler { 
    visibility: hidden; 
    white-space: nowrap;
    font-size: 1.2em;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    padding: 0px 2px 0px 2px;
}


/*-------------------*/

.svg-rect {
    fill: #e7e7e7;
}

.defs-arrow-end {
    fill: #3e3e3e;
}

/*  states  ------------------------------------------------------------ */
.state-group circle{
    fill: #ffffff;
    stroke: #3e3e3e;
    stroke-width: 2px;
}

.state-group.mouse-over-node circle{
    stroke: #3e3e3e;
    fill:#d8e9f5;
}

.state-group.selected circle{
    stroke:#3e3e3e;
    fill: #84d6ff;
}

.state-fullname-rect {
    fill: #4646468c;
    /*stroke-width: 1px;
    stroke: #1a1a1a7e;*/
}

.state-fullname-text {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 15px;
    cursor: default;
    fill: #ebebeb17;
}

.stateEl>.stateInput {
    color: black;
    text-align: center;
    outline: none;
    background: rgba(255, 255, 255, 0.562);
    border: 0px solid transparent;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 1.2em;
    width: 47px;
    cursor: default;
    margin: 0;
    padding: 2px;
}

.stateInput:read-only {
    -moz-user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;
    background: transparent;
    color: black;
    cursor: default;
}


/*  edges ------------------------------------------------------------ */
.edge-group.mouse-over-node path{
    stroke:#8bd0ff;
}

.init-arrow:hover{
    stroke:#8bd0ff;
}

.edge-group.selected path{
    stroke:#4fa8e2;
}

.temp-edge-group.selected path {
    stroke: #53c08d;
}

.edge-path {
    fill: none;
    stroke: #3e3e3e;
    stroke-width: 3.2px;
    cursor: default;
}

.edge-path.hidden, .edge-marker-path.hidden {
   /* stroke-width: 0; */
   visibility: hidden;
}

.edge-marker-path {
    stroke-width: 2.1px;
}

.edge-rect {
    fill: white;
    stroke:  #3e3e3e;
    stroke-width: 1px;
}

.edge-text, .state-text, .mock-text {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 16px;
    cursor: default;
}

.edgeInput {
    box-sizing: border-box;
    -moz-box-sizing: border-box;
    -webkit-box-sizing: border-box;
    text-align: center;
    outline: none;
    background: white;
    border: 0px solid #2d2d2d;
    border-radius: 4px;
    box-shadow: 0px 0px 1px 1px #2882bdd6;
    color: black;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 1.2em;
    width: 32px;
    padding: 2px;
    margin: 0;
    cursor: default;
}

.edgeInput::selection {
    background:#8ba6ff;
  }

.edgeInput:read-only{
    -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background: white;
  box-shadow: 0px 0px 1px 1px #797979c4;
  color: black;
  cursor: default;
}


.foreignObject {
    background-color: transparent;
}


/* Table ----------------------------------------- */
.control-button {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 1em;
    padding: 7px;
    margin: 8px 8px 0px 0px;
    /*
    background-color: #e0e0e0;
    border: 0px solid rgb(179, 179, 179);
    */
}

.myTable {
    margin-top: 10px;
    border-spacing: 0;
    border-collapse: collapse;
}

.myCell {
    border: 1px solid #cecece;
    padding: 0;
    background-color: white;
}

.cell-input { /*input inside td*/
    font-size: 1.4em;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    text-align: center;
    width: 100%;
    border: 0px;
    border-radius: 0px;
    background-color: #ffffff;
    padding: 7px 7px 7px 7px;
    margin: 0;
    line-height: 1.5px;
}

.column-header-cell { /* td */
    background-color: #c0c0c0;
    border: 1px solid #cecece;
    padding: 0;
}

.column-header-input { /*input inside td, set bg color here*/
    background-color: #f1f1f1;
}

.row-header-cell {
    background-color:#f1f1f1;
    border: 1px solid #cecece;
    padding: 0em;
    margin: 0em;
}

.row-header-input { /*input inside td*/
    transition: background-color 0.2s ease;
    background-color:#f1f1f1;
    text-align: left;
    cursor: pointer;
    border-radius: 0px;
}

.row-header-input:hover {
    background-color: #d3f8d3;
    cursor: pointer;
}

/*selected row header input*/
.selected-header-input {
    background-color: lightgreen;
    text-align: left;
    cursor: text;
    border-radius: 0px;
}

.inactive-cell { /*td, topleft corner of table*/
    background-color: #cecece;
    border: 1px solid #cecece;
    cursor: default;
}

.incorrect-cell {
    background-color: #ff6666;
}

.delete-button-cell { /* td */
    border: 1px solid #e6c9c9;
    padding: 0px 10px 0px 10px;
    background-color: #f5dfdf;
    
    text-align: center;
    font-size: 1.5em;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    color: #c20202;
    cursor: pointer;
}

.delete-button-cell:hover {
    background-color:  #f0b8b8;
    border: 1px solid #cf9090;
    color:#a00000;
    text-decoration: none;
}

.add-button-cell { /* td */
    border: 1px solid #a6c7a6;
    padding: 0px 10px 0px 10px;
    background-color: #e9f5e9;

    text-align: center;
    font-size: 1.5em;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    color: #10bd00;
    text-decoration: none;
    cursor: pointer;
}

.add-button-cell:hover {
    background-color: #d7ecd7;
    border: 1px solid #a6c7a6;
    color: #24961a;
    text-decoration: none;
}

.alert {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 1em;
    padding: 15px;
    margin-top: 15px;
    margin-bottom: 20px;
    border: 1px solid transparent;
    border-radius: 4px;
}

.alert-danger {
    color: #a94442;
    background-color: #f2dede;
    border-color: #ebccd1 !important;
    outline: none;
}

.alert-warning {
    color: #8a6d3b;
    background-color: #fcf8e3;
    border-color: #faebcc !important;
    outline: none;
}

.alert-success {
    color: #3c763d;
    background-color: #dff0d8;
    border-color: #d6e9c6 !important;
    outline: none;
}

.alert-info {
    color: #31708f;
    background-color: #d9edf7;
    border-color: #bce8f1 !important;
    outline: none;
}

.my-type {
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    color: rgb(56, 56, 56);
    font-size: 15px;
    font-style: italic;
}

.noselect {
    user-select: none;
}

#constrainer {
    background-color: rgb(255, 255, 255);
    width: 1000px;
}

